# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.853 2009/04/01 12:54:35 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta1 (2009/??/??)
 - (2009/04/01) Implement enhancement/bug# 3527 - the input fields at the
   restrictions of the stats module now allow the use of wildcards at the
   beginning and end of a word (e.g. 'huber*'). This is now the same behavior
   as in GenericAgent. But not the behavior of the TicketSearch.
 - (2009/03/30) Updated CPAN module Authen::SASL to version 2.12.
 - (2009/03/30) Updated CPAN module Text::CSV to version 1.11.
 - (2009/03/30) Updated CPAN module File::Temp to version 0.21.
 - (2009/03/17) Fixed bug# 3729 - Missing translation of "Customer history"
    in AgentTicketCustomer.
 - (2009/03/17) Fixed bug# 3713 - Apache-error if ticket has only internal
    articles.
 - (2009/03/06) Added article filter feature in TicketZoom.
 - (2009/03/01) Replaced dtl variable for image location "$Env{"Images"}" by
    using config option "$Config{"Frontend::ImagePath"}" to remove not needed
    $Env{} "alias". Added "$Config{"Frontend::JavaScriptPath"}" for java script
    and "$Config{"Frontend::CSSPath"}" for css directory.
 - (2009/02/27) Added feature to show the ticket title or the last
    customer subject in TicketOverviewSmall.
 - (2009/02/27) Added enhancement bug# 3271 Added accessibility of
    Kernel::System::CustomerUser (CustomerUserObject) to bin/cgi-bin/rpc.pl
    (SOAP handle).
 - (2009/02/17) Added group permission support for bulk feature (config via
    SysConfig -> Ticket -> Core::TicketBulkAction).
 - (2009/02/17) Added read only permission support for watched tickets.
 - (2009/02/17) Added agent notification support for watched tickets (config