@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.853 2009/04/01 12:54:35 mh Exp $
+# $Id: CHANGES,v 1.854 2009/04/01 13:02:49 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -127,6 +127,8 @@
     auth support.
 
 2.3.5 (2009/??/??)
+ - (2009/04/01) Fixed bug# 3368 - DefaultSelection for ArticleFreeText and
+    TicketFreeText is ignored in AgentTicketPhoneOutbound.
  - (2009/04/01) Fixed bug# 3719 - otrs.checkModules incorrectly parses PDF::API2
     version.
  - (2009/04/01) Fixed bug# 3257 - otrs.checkModules incorrectly states DBD:mysql
